prevent action bar content from  overflow

--- a/src/app/shared/components/action-bar/action-bar.component.scss
+++ b/src/app/shared/components/action-bar/action-bar.component.scss
@@ -11,3 +11,8 @@
   padding-left: 2%;
   padding-right: 2%;
 }
+
+.content-container {
+  overflow: hidden;
+  max-width: 100%;
+}
